# ebpf-example

./: CMakeLists.txt  README.md  atr-notes.txt
no-tooling/: inline.c  make_inline_example.sh  make_xdp_drop.sh
no-tooling/reading-bpf-man/: main.c  make.sh
out-of-tree/latest/common/: bpf_load.c
out-of-tree/latest/src/: hellotrace_kern.c  make.sh
out-of-tree/v4.15/: atr-notes.txt  cpustat_kern.c  cpustat_user.c  make-kernel.sh  make-user.sh
out-of-tree/v4.15/from_kernel/: bpf_load.c
src/: BlockCharHist.cpp  CPUDistribution.cpp  HelloWorld.cpp  LoopTest.cpp  ProbeTcpConnect.cpp  TailCall.cpp  file_src.c
